fix text wrapping in inline discussions

--- a/lms/static/sass/courseware/_course-content-01.scss
+++ b/lms/static/sass/courseware/_course-content-01.scss
@@ -832,6 +832,7 @@ body.view-in-course {
 
         .thread-preview-body {
           font-size: calcRem(14);
+          white-space: nowrap;
         }
 
         .forum-nav-thread-labels {
